--- a/pag.html
+++ b/pag.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     
+<label for="">Listado de paises</label>
+<select name="" id="">
+
+    <option value="1">Rep. Dom</option>
+    <option value="2">Haiti</option>>
+
+</select>
 </body>
 </html>
