Trabajando con php

--- a/pag.html
+++ b/pag.html
@@ -6,12 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+
 <label for="">Listado de paises</label>
 <select name="" id="">
 
     <option value="1">Rep. Dom</option>
-    <option value="2">Haiti</option>>
+    <option value="2">Haiti</option>
+    >
 
 </select>
 </body>
