Trabajando con php

--- a/pag.html
+++ b/pag.html
@@ -7,13 +7,11 @@
 </head>
 <body>
 
-<label for="">Listado de paises</label>
-<select name="" id="">
 
-    <option value="1">Rep. Dom</option>
-    <option value="2">Haiti</option>
-    >
+<header>
 
-</select>
+
+</header>
+
 </body>
 </html>
